upd traffic direction
